# complex

./: .gitattributes  .gitignore  .pylintrc  Dockerfile  MANIFEST.in  Makefile  README.md  complex.py  docs.sh  main.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: pull-request.yml  push-doc.yml  push-pypi.yml  push.yml
complex/: __init__.py  _version.py  complex.py  functions.py
docs/: complex.html  genindex.html  index.html  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js
docs/_sources/: complex.rst.txt
docs/doctrees/: changelog.doctree  complex.doctree  environment.pickle  index.doctree  modules.doctree
docs/html/: .buildinfo  changelog.html  complex.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/html/_sources/: changelog.rst.txt  complex.rst.txt  index.rst.txt
docs/markdown/: changelog.md  complex.md  index.md  modules.md
docs/source/: conf.py  index.rst  installation.rst  readme.rst  resume.rst  usage.rst
docsbuild/source/: changelog.rst
source/: changelog.rst  conf.py
tests/: conftest.py  test_complex.py
