[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.7.1", "versioneer[toml]"]

[project]
name = "complex"
description = "A template for public packages, implementing the notion of compex number"
license = "GPLv3"
authors = {name = "Advestis", email= "pythondev@advestis.com"}
readme = "README.md"
requires-python = ">=3.7"
keywords = ["tutorial", "practice"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3.8",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "pandas",
    "plotly"
]
[project.optional-dependencies]
dev = [
    "pylint",
    "pytest",
]

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "complex/_version.py"
versionfile_build = "complex/_version.py"
tag_prefix = "v"
parentdir_prefix = "complex-"