[metadata]
name = complex
description = A template for public packages, implementing the notion of compex number
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Advestis/complex
author = Advestis
author_email = pythondev@advestis.com
license = GPLv3
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: Unix
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    Bug Tracker = https://github.com/Advestis/complex/issues
    Documentation = https://advestis.github.io/complex
    Source Code = https://github.com/Advestis/complex/

[options]
packages = find:
install_requires =
    pandas
    plotly
python_requires = >=3.7
include_package_data = True

[versioneer]
VCS = git
style = pep440
versionfile_source = complex/_version.py
versionfile_build = complex/_version.py
tag_prefix = v
parentdir_prefix = complex-