[metadata]
name = complex
description = A template for public packages, implementing the notion of compex number
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Advestis/complex
author = Advestis
author_email = pythondev@advestis.com
license = GPLv3
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Operating System :: Unix
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    Bug Tracker = https://github.com/Advestis/complex/issues
    Documentation = https://advestis.github.io/complex
    Source Code = https://github.com/Advestis/complex/


[options]
python_requires = >=3.7
install_requires =
    pandas
    plotly
# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = complex/_version.py
versionfile_build = complex/_version.py
tag_prefix = v
parentdir_prefix = complex-
